// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AggregatedTranscriptions Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kRtCFV"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dhIeMG"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gfVYgi sc-cSHVUG hDUXUW"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 kalnnn"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 cCiwQh"
          >
            <span
              className="StyledText-sc-1sadyjn-0 kItKvV"
              size="1em"
            >
              Transcribed Text
            </span>
            <button
              className="StyledButton-sc-323bzc-0 eDTDBY"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 ibNMyq"
                size="small"
              >
                ADD LINE
              </span>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 jwtRyx sc-chPdSV lxGhg"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 coWcrr"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 ewfHUX"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 gRrqps"
                >
                  <h6
                    className="sc-gzVnrw kDhxVb"
                  >
                    Aggregated Transcription
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 iALYDe"
                >
                  <h6
                    className="sc-gzVnrw kDhxVb"
                  >
                    Flag
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 gAAiuc"
                >
                  <h6
                    className="sc-gzVnrw sc-htoDjs GbAiK"
                  >
                    Consensus Score
                  </h6>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 cdQuWl"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 ciWGIa sc-bZQynM evmlAb"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 RVZwg"
                  size="xsmall"
                >
                  This page does not contain transcription data.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AggregationSettings Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kRtCFV"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 LmuLY"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 fCmtAg sc-eNQAEJ esYNcD"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-ellipsis "
          data-icon="ellipsis"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M120 256c0 30.9-25.1 56-56 56s-56-25.1-56-56s25.1-56 56-56s56 25.1 56 56zm160 0c0 30.9-25.1 56-56 56s-56-25.1-56-56s25.1-56 56-56s56 25.1 56 56zm104 56c-30.9 0-56-25.1-56-56s25.1-56 56-56s56 25.1 56 56s-25.1 56-56 56z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="StyledStack-sc-ajspsk-0 iHjoYe"
      >
        <div
          className="StyledStack__StyledStackLayer-sc-ajspsk-1 jiApIn"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iALYDe"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 cvpPYm"
            >
              <span
                className="StyledText-sc-1sadyjn-0 ibNMyq"
              >
                Edit Aggregation Settings
              </span>
              <button
                aria-label="Close Aggregation Settings"
                className="StyledButton-sc-323bzc-0 eDTDBY"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle-xmark "
                  data-icon="circle-xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </div>
            <div
              className="StyledBox-sc-13pk1d4-0 iALYDe"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 iALYDe"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 cgPmou"
                >
                  <span
                    className="StyledText-sc-1sadyjn-0 ibNMyq"
                  >
                    Choose a clustering algorithm based on the way in which transcriptions have been made.
                  </span>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                  />
                  <div
                    className="StyledBox-sc-13pk1d4-0 jJcUgv"
                  >
                    <button
                      className="StyledButton-sc-323bzc-0 eDTDBY"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 cgPmou sc-kGXeez fOyJew"
                      >
                        <img
                          alt="Optics Aggregation Example"
                          className="StyledImage-sc-ey4zx9-0 iSpWZD"
                          onLoad={[Function]}
                          src="optics.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 ibNMyq"
                        >
                          OPTICS Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 RVZwg"
                          size="xsmall"
                        >
                          Used for clustering full-width transcriptions
                        </span>
                      </div>
                    </button>
                    <button
                      className="StyledButton-sc-323bzc-0 eDTDBY"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 cgPmou sc-kpOJdX kdgkNy"
                      >
                        <img
                          alt="DBScan Aggregation Example"
                          className="StyledImage-sc-ey4zx9-0 iSpWZD"
                          onLoad={[Function]}
                          src="dbscan.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 ibNMyq"
                        >
                          DBSCAN Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 RVZwg"
                          size="xsmall"
                        >
                          Used for clustering shorter, incomplete transcriptions of a line
                        </span>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iuTilI"
                >
                  <button
                    aria-label="Close Aggregation Settings"
                    className="StyledButton-sc-323bzc-0 eDTDBY"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 ibNMyq"
                      size="small"
                    >
                      CLOSE AND CANCEL
                    </span>
                  </button>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gSOXbB"
                  />
                  <button
                    className="StyledButton-sc-323bzc-0 edSFVv"
                    disabled={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 ibNMyq"
                      size="small"
                    >
                      NEXT
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DownloadDataModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kRtCFV"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cLSQGc"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 eitICG"
      >
        <span
          className="StyledText-sc-1sadyjn-0 bFwqjc"
          size="large"
        >
          Download subject data
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gSOXbB"
        />
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 kxezLV"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle-xmark fa-xs "
            data-icon="circle-xmark"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 liotTx"
      >
        Download a .zip file containing:
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 iALYDe"
      >
        <span
          className="StyledText-sc-1sadyjn-0 ibNMyq"
          size="small"
        >
          • Line by line transcription and metadata (.csv)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
        />
        <span
          className="StyledText-sc-1sadyjn-0 ibNMyq"
          size="small"
        >
          • Text-only file (.txt)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
        />
        <span
          className="StyledText-sc-1sadyjn-0 ibNMyq"
          size="small"
        >
          • Raw, unparsed transcription data (.json)
        </span>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 iKOWEQ"
      >
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq"
            size="small"
          >
            CLOSE
          </span>
        </button>
        <button
          aria-label="Download Subject Data"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq"
            size="small"
          >
            DOWNLOAD
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FilmstripViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kRtCFV"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cbDUBe sc-jAaTju lEldS"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 eitICG"
      >
        <span
          className="StyledText-sc-1sadyjn-0 kItKvV"
          size="1em"
        >
          All Pages
        </span>
        <button
          className="StyledButton-sc-323bzc-0 eDTDBY"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq sc-jDwBTQ eYRRwn"
          >
            Delete Pages
          </span>
        </button>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dNxLGl"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots HeaderButtons LayoutButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <button
    className="StyledButton-sc-323bzc-0 eDTDBY"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 ePScYL"
    >
      <span
        className="StyledText-sc-1sadyjn-0 cWmfjX sc-hMqMXs hCtDtz"
      >
        Layout
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 kOByep"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 hSXSul"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-xs "
          color="#555555"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gEstju"
        />
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-xs fa-rotate-90 "
          color="#CCCCCC"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 64C21.5 64 0 85.5 0 112V400c0 26.5 21.5 48 48 48H80c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H48zm192 0c-26.5 0-48 21.5-48 48V400c0 26.5 21.5 48 48 48h32c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48H240z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons MoreButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <button
    aria-label="Open Drop"
    className="StyledButton-sc-323bzc-0 eDTDBY"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cXAKAC"
    >
      <span
        className="StyledText-sc-1sadyjn-0 cWmfjX"
      >
        MORE
      </span>
      <svg
        aria-label="FormDown"
        className="StyledIcon-sc-ofa7kd-0 bFNbxN"
        viewBox="0 0 24 24"
      >
        <path
          d="m18 9-6 6-6-6"
          fill="none"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons UndoButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <button
    className="StyledButton-sc-323bzc-0 edSFVv"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 ePScYL"
    >
      <span
        className="StyledText-sc-1sadyjn-0 cWmfjX sc-hMqMXs hCtDtz"
      >
        Undo
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 kOByep"
      />
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-arrow-rotate-right fa-xs "
        color="#555555"
        data-icon="arrow-rotate-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M386.3 160H336c-17.7 0-32 14.3-32 32s14.3 32 32 32H464c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32s-32 14.3-32 32v51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots LineViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kRtCFV"
  />
</div>
`;

exports[`Storyshots MarkApproved Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <label
    checked={false}
    className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 yBfvd"
    disabled={false}
    label={
      <ForwardRef(Styled(Text))
        color="#5C5C5C"
      >
        Ready For Review
      </ForwardRef(Styled(Text))>
    }
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <span
      className="StyledText-sc-1sadyjn-0 cWmfjX sc-kEYyzF ggEPv"
    >
      Ready For Review
    </span>
    <div
      checked={false}
      className="StyledBox-sc-13pk1d4-0 jPYuqG StyledCheckBox-sc-1dbk5ju-6 jXdLin"
      disabled={false}
    >
      <input
        checked={false}
        className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cmPpnw"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        checked={false}
        className="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 fUIWkU"
        disabled={false}
      >
        <span
          checked={false}
          className="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 GTsLr"
          disabled={false}
        />
      </span>
    </div>
  </label>
</div>
`;

exports[`Storyshots MetadataButton Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kRtCFV"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 jMdiSR"
    >
      <button
        aria-label="Open Metadata Information"
        className="StyledButton-sc-323bzc-0 bggMKZ"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 llwaWo"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info sc-cvbbAY josHqt"
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M144 80c0 26.5-21.5 48-48 48s-48-21.5-48-48s21.5-48 48-48s48 21.5 48 48zM0 224c0-17.7 14.3-32 32-32H96c17.7 0 32 14.3 32 32V448h32c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H64V256H32c-17.7 0-32-14.3-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SearchModalContainer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kRtCFV"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kjGmOE"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 kjAnZI"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 iALYDe"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 fuOFHK"
          >
            <span
              className="StyledText-sc-1sadyjn-0 bFwqjc"
              size="large"
            >
              Search or Filter
            </span>
            <button
              aria-label="Close Subject Search Modal"
              className="StyledButton-sc-323bzc-0 bggMKZ"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-circle-xmark "
                data-icon="circle-xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
          />
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq sc-jlyJG iqYbEW"
          >
            Find a specific subject
          </span>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
          />
          <form
            className="StyledBox-sc-13pk1d4-0 iALYDe"
            onSubmit={[Function]}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 ikHAPi"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 hmBiuZ"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 iALYDe FormField__FormFieldBox-sc-m9hood-0 eXFEgp sc-gipzik keWqgP"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 gqCeYR"
                    htmlFor="type"
                  >
                    ID TYPE
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 tpEpi FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <button
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-label="Open Drop; Selected: [object Object]"
                      className="StyledButton-sc-323bzc-0 eDTDBY StyledSelect__StyledSelectDropButton-sc-znp66n-5 koaUUc"
                      id="type"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 fuOFHK"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 flXAOs"
                        >
                          <span
                            className="StyledText-sc-1sadyjn-0 ibNMyq"
                          >
                            Select...
                          </span>
                          <input
                            className="StyledSelect__HiddenInput-sc-znp66n-2 drNEcH"
                            id="type__input"
                            name="type"
                            readOnly={true}
                            type="text"
                          />
                        </div>
                        <div
                          className="StyledBox-sc-13pk1d4-0 dWqffs"
                          style={
                            Object {
                              "minWidth": "auto",
                            }
                          }
                        >
                          <svg
                            aria-label="FormDown"
                            className="StyledIcon-sc-ofa7kd-0 jowTsj"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="m18 9-6 6-6-6"
                              fill="none"
                              stroke="#000"
                              strokeWidth="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 jZnmGk"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 eURnJB"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 iALYDe FormField__FormFieldBox-sc-m9hood-0 eXFEgp sc-gipzik keWqgP"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 gqCeYR"
                    htmlFor="id"
                  >
                    NAME
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 tpEpi FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kYQCpm"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 ddiGfT"
                        color="red"
                        disabled={false}
                        id="id"
                        name="id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="eg. 58674"
                        size="small"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
            />
            <span
              className="StyledText-sc-1sadyjn-0 ibNMyq sc-jlyJG iqYbEW"
            >
              Filter subject list by status
            </span>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 eitICG"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 iALYDe"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 iEktqY"
                >
                  Approval Status
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iALYDe FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 tpEpi FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="unseen"
                      label={
                        <ForwardRef
                          level={1}
                          size="small"
                        >
                          UNSEEN
                        </ForwardRef>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iJsWTA StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="unseen"
                          name="unseen"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 krHtzJ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        UNSEEN
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iALYDe FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 tpEpi FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="in_progress"
                      label={
                        <ForwardRef
                          level={1}
                          size="small"
                        >
                          IN PROGRESS
                        </ForwardRef>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iJsWTA StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="in_progress"
                          name="in_progress"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 krHtzJ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        IN PROGRESS
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iALYDe FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 tpEpi FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="ready"
                      label={
                        <ForwardRef
                          level={1}
                          size="small"
                        >
                          READY FOR REVIEW
                        </ForwardRef>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iJsWTA StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="ready"
                          name="ready"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 krHtzJ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        READY FOR REVIEW
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iALYDe FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 tpEpi FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="approved"
                      label={
                        <ForwardRef
                          level={1}
                          size="small"
                        >
                          APPROVED
                        </ForwardRef>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iJsWTA StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="approved"
                          name="approved"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 krHtzJ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        APPROVED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 iALYDe"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 iEktqY"
                >
                  Additional Filters
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 iALYDe FormField__FormFieldBox-sc-m9hood-0 eXFEgp"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 tpEpi FormField__FormFieldContentBox-sc-m9hood-1 kjPekL"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 vqKGU"
                      disabled={false}
                      htmlFor="flagged"
                      label={
                        <ForwardRef
                          level={1}
                          size="small"
                        >
                          FLAGGED
                        </ForwardRef>
                      }
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 iJsWTA StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="flagged"
                          name="flagged"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 krHtzJ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ibNMyq"
                        size="small"
                      >
                        FLAGGED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 btfXFh"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 iKOWEQ"
            >
              <button
                aria-label="Close Subject Search Modal"
                className="StyledButton-sc-323bzc-0 eDTDBY"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 ibNMyq sc-jlyJG iqYbEW"
                >
                  Close
                </span>
              </button>
              <button
                aria-label="Submit Subject Search Query"
                className="StyledButton-sc-323bzc-0 eDTDBY"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="submit"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 ibNMyq sc-jlyJG iqYbEW"
                >
                  Search
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectLockedModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kRtCFV"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cNkfPa"
    >
      <span
        className="StyledText-sc-1sadyjn-0 bFwqjc"
        size="large"
      >
        Subject locked
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ibNMyq sc-gPEVay yONTa"
      >
        This subject cannot be accessed because 
        <strong />
         is currently accessing it.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ibNMyq sc-gPEVay yONTa"
      >
        For access, ask them to close their version.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <button
        aria-label="Return to Group Index Page"
        className="StyledButton-sc-323bzc-0 dPtlpN"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span
          className="StyledText-sc-1sadyjn-0 ibNMyq"
          size="small"
        >
          BACK TO GROUP INDEX
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 dMoZrW"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 fHbbfF"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="StyledBox-sc-13pk1d4-0 eyJaB"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 fuOFHK"
        >
          <span
            className="StyledText-sc-1sadyjn-0 kItKvV"
            size="1em"
          >
            Original Subject
          </span>
          <div
            className="StyledBox-sc-13pk1d4-0 hSXSul"
          >
            <button
              className="StyledButton-sc-323bzc-0 dPtlpN"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 ibNMyq"
              >
                HIDE ALL LINES
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dPmBVt sc-hzDkRC eniHZY"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 dPmBVt sc-jhAzac ZlZeV"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 gbaDgB sc-bRBYWo cfFjGV"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 iALYDe sc-jhAzac sc-fBuWsC deBBpZ"
          />
        </div>
        <div
          className="StyledBox-sc-13pk1d4-0 dPmBVt"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UnapproveModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 fOuhjc"
>
  <div
    className="StyledBox-sc-13pk1d4-0 kRtCFV"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cNkfPa"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 eitICG"
      >
        <span
          className="StyledText-sc-1sadyjn-0 bFwqjc"
          size="large"
        >
          Unapprove subject data
        </span>
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle-xmark fa-xs "
            data-icon="circle-xmark"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ibNMyq sc-iRbamj jHMZAa"
      >
        By unapproving this subject, the subject's data will be unavailable for future downloads until re-marked as approved.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ibNMyq sc-iRbamj jHMZAa"
      >
        This action can be reversed at any time.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 dlYXhu"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 iKOWEQ"
      >
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq"
            size="small"
          >
            CLOSE AND CANCEL
          </span>
        </button>
        <button
          aria-label="Confirm to Unapprove Subject"
          className="StyledButton-sc-323bzc-0 dPtlpN"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ibNMyq"
            size="small"
          >
            YES, UNAPPROVE
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
